--- a/Year1_term3_project_joystick.ioc
+++ b/Year1_term3_project_joystick.ioc
@@ -40,25 +40,31 @@ Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=TIM1
-Mcu.IPNb=7
+Mcu.IP7=UART4
+Mcu.IPNb=8
 Mcu.Name=STM32F303Z(D-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC0
 Mcu.Pin1=PC1
-Mcu.Pin10=PE15
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin10=PE14
+Mcu.Pin11=PE15
+Mcu.Pin12=PD10
+Mcu.Pin13=PG8
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PC10
+Mcu.Pin17=PC11
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PC2
-Mcu.Pin3=PA0
-Mcu.Pin4=PA4
-Mcu.Pin5=PB1
-Mcu.Pin6=PE10
-Mcu.Pin7=PE12
-Mcu.Pin8=PE13
-Mcu.Pin9=PE14
-Mcu.PinsNb=15
+Mcu.Pin3=PC3
+Mcu.Pin4=PA0
+Mcu.Pin5=PA4
+Mcu.Pin6=PB1
+Mcu.Pin7=PE10
+Mcu.Pin8=PE12
+Mcu.Pin9=PE13
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303ZETx
@@ -87,7 +93,17 @@ PB1.Mode=IN1-Single-Ended
 PB1.Signal=ADC3_IN1
 PC0.Signal=S_TIM1_CH1
 PC1.Signal=S_TIM1_CH2
+PC10.Mode=Asynchronous
+PC10.Signal=UART4_TX
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
 PC2.Signal=S_TIM1_CH3
+PC3.Locked=true
+PC3.Signal=S_TIM1_CH4
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=DC2
+PD10.Locked=true
+PD10.Signal=GPIO_Output
 PE10.GPIOParameters=GPIO_Label
 PE10.GPIO_Label=STP
 PE10.Locked=true
@@ -108,6 +124,10 @@ PE15.GPIOParameters=GPIO_Label
 PE15.GPIO_Label=MS2
 PE15.Locked=true
 PE15.Signal=GPIO_Output
+PG8.GPIOParameters=GPIO_Label
+PG8.GPIO_Label=DC1
+PG8.Locked=true
+PG8.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -139,7 +159,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true
 RCC.ADC12outputFreq_Value=64000000
 RCC.ADC34outputFreq_Value=64000000
 RCC.AHBFreq_Value=64000000
@@ -190,11 +210,14 @@ SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
 SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
+SH.S_TIM1_CH4.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Prescaler,Period,AutoReloadPreload
+TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation3 CH3,Prescaler,Period,AutoReloadPreload,Channel-PWM Generation4 CH4,Channel-PWM Generation2 CH2
 TIM1.Period=2000-1
 TIM1.Prescaler=640-1
 VP_SYS_VS_Systick.Mode=SysTick
